[package]
name = "parking_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
openssl = {version = "0.10", features = ["vendored"]}
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.12", features = ["blocking"] }
# Serde / json
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1"
serde_with = "2"
# Axum
axum = "0.6.20"
tower-http = { version = "0.4", features = ["fs", "cors"]}
tower-cookies = "0.9"
tower = "0.4"
http = {version = "1"}
# Redis
bb8-redis = "0.15"
# Other
chrono = "0.4"
uuid = {version = "1", features = ["v4", "fast-rng"]}